@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-  Copyright (c) 2016, 2018 IBM Corp. and others
+  Copyright (c) 2016, 2019 IBM Corp. and others
 
   This program and the accompanying materials are made available under
   the terms of the Eclipse Public License 2.0 which accompanies this
@@ -205,17 +205,31 @@
 					</javac>
 				</then>
 			</elseif>
-			<else>
+			<else> <!-- Java 11+ -->
+				<if>
+					<equals arg1="${JDK_VERSION}" arg2="11"/>
+					<then>
+						<property name="src_version" location="./src_110" />
+						<property name="addExports_version" value="" />
+					</then>
+					<else> <!-- Java 12+ -->
+						<property name="src_version" location="./src_120" />
+						<property name="addExports_version" value="--add-exports java.base/jdk.internal.access=ALL-UNNAMED" />
+					</else>
+				</if>
+				
 				<property name="addExports" value="--add-exports java.base/com.ibm.tools.attach.target=ALL-UNNAMED --add-exports java.base/com.ibm.oti.vm=ALL-UNNAMED --add-exports java.base/com.ibm.oti.util=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-exports java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports java.base/com.ibm.jit.crypto=ALL-UNNAMED --add-exports java.base/com.ibm.jit=ALL-UNNAMED --add-exports java.base/com.ibm.oti.reflect=ALL-UNNAMED" />
 				<echo>===addExports:		${addExports}</echo>
 				<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
 					<src path="${src}" />
-					<src path="./src_110" />
+					<src path="./src_110_up" />
+					<src path="${src_version}" />
 					<src path="${src_90_jcl}" />
 					<src path="${TestUtilities}" />
 					<src path="${transformerListener}" />
 					<compilerarg line='${addExports}' />
 					<compilerarg line='${addExports_90_jcl}' />
+					<compilerarg line='${addExports_version}' />
 					<compilerarg line='--add-modules openj9.sharedclasses' />
 					<!-- PR117298-->
 					<exclude name="**/Cmvc194280.java" />
